Actualization of Company